# prebuilt_tools

./: BUILD.bazel  MODULE.bazel  README.md  generated.MODULE.bazel  requirements.txt  run_tool_help_test.sh
.bcr/: metadata.template.json
.github/workflows/: release.yml  release_prep.sh  test.yml
examples/rules_foreign_cc/: BUILD.bazel  MODULE.bazel  hello_test.sh
examples/rules_foreign_cc/toolchains/: BUILD.bazel
generate/: BUILD.bazel  MODULE.bazel.tmpl  config.json  create_conda_envs.py  generate.py  locks.bzl.tmpl
private/: BUILD.bazel  generated_locks.bzl
private/specs/autoconf/: autoconf_2.69.yml  autoconf_2.69_win.yml  autoconf_2.71.yml  autoconf_2.71_win.yml  autoconf_2.72.yml
private/specs/automake/: automake_1.14.yml  automake_1.15.yml  automake_1.16.yml  automake_1.17.yml
private/specs/binutils/: binutils_1.0.yml  binutils_2.26.yml  binutils_2.27.yml  binutils_2.28.yml  binutils_2.30.yml  binutils_2.31.yml  binutils_2.32.yml  binutils_2.33.yml  binutils_2.34.yml  binutils_2.35.yml  binutils_2.36.yml  binutils_2.39.yml  binutils_2.40.yml  binutils_2.42.yml  binutils_2.43.yml  binutils_2.44.yml  binutils_2.45.yml
private/specs/bison/: bison_3.0.yml  bison_3.1.yml  bison_3.4.yml  bison_3.8.yml
private/specs/buildifier/: buildifier_3.5.yml  buildifier_4.0.yml  buildifier_4.2.yml  buildifier_5.0.yml  buildifier_5.1.yml  buildifier_6.0.yml  buildifier_6.1.yml  buildifier_6.3.yml  buildifier_6.4.yml  buildifier_7.1.yml  buildifier_7.3.yml  buildifier_8.0.yml  buildifier_8.2.yml
private/specs/cmake/: cmake_3.14.yml  cmake_3.15.yml  cmake_3.16.yml  cmake_3.17.yml  cmake_3.18.yml  cmake_3.19.yml  cmake_3.20.yml  cmake_3.21.yml  cmake_3.22.yml  cmake_3.23.yml  cmake_3.24.yml  cmake_3.25.yml  cmake_3.26.yml  cmake_3.27.yml  cmake_3.28.yml  cmake_3.29.yml  cmake_3.30.yml  cmake_3.31.yml  cmake_4.0.yml  cmake_4.1.yml  cmake_4.2.yml
private/specs/doxygen/: doxygen_1.10.yml  doxygen_1.11.yml  doxygen_1.12.yml  doxygen_1.13.yml  doxygen_1.8.yml  doxygen_1.9.yml
private/specs/flex/: flex_2.5.yml  flex_2.6.yml
private/specs/grep/: grep_3.10.yml  grep_3.11.yml  grep_3.12.yml  grep_3.9.yml
private/specs/jq/: jq_1.5.yml  jq_1.6.yml  jq_1.7.yml  jq_1.8.yml
private/specs/m4/: m4_1.4.yml  m4_1.4_win.yml
private/specs/make/: make_4.2.yml  make_4.3.yml  make_4.4.yml
private/specs/meson/: meson_0.45.yml  meson_0.46.yml  meson_0.47.yml  meson_0.48.yml  meson_0.49.yml  meson_0.50.yml  meson_0.51.yml  meson_0.52.yml  meson_0.53.yml  meson_0.54.yml  meson_0.55.yml  meson_0.56.yml  meson_0.57.yml  meson_0.58.yml  meson_0.59.yml  meson_0.60.yml  meson_0.61.yml  meson_0.62.yml  meson_0.63.yml  meson_0.64.yml  meson_1.0.yml  meson_1.1.yml  meson_1.10.yml  meson_1.2.yml  meson_1.3.yml  meson_1.4.yml  meson_1.5.yml  meson_1.6.yml  meson_1.7.yml  meson_1.8.yml  meson_1.9.yml
private/specs/ninja/: ninja_1.10.yml  ninja_1.11.yml  ninja_1.12.yml  ninja_1.13.yml  ninja_1.6.yml  ninja_1.7.yml  ninja_1.8.yml  ninja_1.9.yml
private/specs/pandoc/: pandoc_1.16.yml  pandoc_1.17.yml  pandoc_1.18.yml  pandoc_1.19.yml  pandoc_2.0.yml  pandoc_2.1.yml  pandoc_2.10.yml  pandoc_2.11.yml  pandoc_2.12.yml  pandoc_2.13.yml  pandoc_2.14.yml  pandoc_2.15.yml  pandoc_2.16.yml  pandoc_2.17.yml  pandoc_2.18.yml  pandoc_2.19.yml  pandoc_2.2.yml  pandoc_2.3.yml  pandoc_2.4.yml  pandoc_2.5.yml  pandoc_2.6.yml  pandoc_2.7.yml  pandoc_2.8.yml  pandoc_2.9.yml  pandoc_3.1.yml  pandoc_3.2.yml  pandoc_3.3.yml  pandoc_3.4.yml  pandoc_3.5.yml  pandoc_3.6.yml  pandoc_3.7.yml  pandoc_3.8.yml
private/specs/pkg-config/: pkg_config_0.28.yml  pkg_config_0.29.yml
private/specs/pkgconf/: pkgconf_2.2.yml  pkgconf_2.3.yml  pkgconf_2.4.yml  pkgconf_2.5.yml
private/specs/ruff/: ruff_0.0.yml  ruff_0.1.yml  ruff_0.10.yml  ruff_0.11.yml  ruff_0.12.yml  ruff_0.13.yml  ruff_0.14.yml  ruff_0.2.yml  ruff_0.3.yml  ruff_0.4.yml  ruff_0.5.yml  ruff_0.6.yml  ruff_0.7.yml  ruff_0.8.yml  ruff_0.9.yml
private/specs/yq/: yq_2.10.yml  yq_2.11.yml  yq_2.12.yml  yq_2.13.yml  yq_2.14.yml  yq_2.4.yml  yq_2.5.yml  yq_2.6.yml  yq_2.7.yml  yq_3.1.yml  yq_3.2.yml  yq_3.3.yml  yq_3.4.yml
tool/: README.md
tool/autoconf/: BUILD.bazel  README.md
tool/automake/: BUILD.bazel  README.md
tool/autoreconf/: BUILD.bazel  README.md
tool/bison/: BUILD.bazel  README.md
tool/buildifier/: BUILD.bazel  README.md
tool/cmake/: BUILD.bazel  README.md
tool/doxygen/: BUILD.bazel  README.md
tool/flex/: BUILD.bazel  README.md
tool/grep/: BUILD.bazel  README.md
tool/jq/: BUILD.bazel  README.md
tool/m4/: BUILD.bazel  README.md
tool/make/: BUILD.bazel  README.md
tool/meson/: BUILD.bazel  README.md
tool/ninja/: BUILD.bazel  README.md
tool/pandoc/: BUILD.bazel  README.md
tool/pkg-config/: BUILD.bazel  README.md
tool/pkg-config.bin/: BUILD.bazel  README.md
tool/pkgconf/: BUILD.bazel  README.md
tool/readelf/: BUILD.bazel  README.md
tool/ruff/: BUILD.bazel  README.md
tool/yq/: BUILD.bazel  README.md
