module(
    name = "prebuilt_tools",
    version = "0.0.0",
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_conda", version = "0.1.2")
bazel_dep(name = "rules_multirun", version = "0.13.0")

bazel_dep(name = "rules_python", version = "1.7.0", dev_dependency = True)

pip = use_extension(
    "@rules_python//python/extensions:pip.bzl",
    "pip",
    dev_dependency = True,
)
pip.parse(
    hub_name = "prebuilt_tools_pip",
    python_version = "3.11",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "prebuilt_tools_pip")

include("//:generated.MODULE.bazel")
