load("@rules_python//python:defs.bzl", "py_binary")
load("@prebuilt_tools_pip//:requirements.bzl", "requirement")

py_binary(
    name = "generate",
    srcs = ["generate.py"],
    data = [
        "config.json",
        "MODULE.bazel.tmpl",
    ],
    deps = [
        requirement("py-rattler"),
    ],
)
