load("@rules_conda//conda/environment:defs.bzl", "run_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

run_binary(
    name = "1.14",
    environment = "@automake_1.14",
    path = select({
        "@platforms//os:windows": "Library/bin/automake",
        "//conditions:default": "bin/automake",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "1.15",
    environment = "@automake_1.15",
    path = select({
        "@platforms//os:windows": "Library/bin/automake",
        "//conditions:default": "bin/automake",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "1.16",
    environment = "@automake_1.16",
    path = select({
        "@platforms//os:windows": "Library/bin/automake",
        "//conditions:default": "bin/automake",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "1.17",
    environment = "@automake_1.17",
    path = select({
        "@platforms//os:windows": "Library/bin/automake",
        "//conditions:default": "bin/automake",
    }),
    visibility = ["//visibility:public"],
)


alias(
    name = "automake",
    actual = ":1.17",
    visibility = ["//visibility:public"],
)


sh_test(
    name = "help_test",
    srcs = ["//:run_tool_help_test.sh"],
    args = ["$(location :1.17)"],
    data = [":1.17"],
    target_compatible_with =
    select({
            "//:platform_linux_64": [],
            "//:platform_linux_aarch64": [],
            "//:platform_linux_ppc64le": [],
            "//:platform_macos_x86_64": [],
            "//:platform_macos_arm64": [],
            "//conditions:default": ["@platforms//:incompatible"],
        }),
)
