load("@rules_conda//conda/environment:defs.bzl", "run_binary")

run_binary(
    name = "2.69",
    environment = "@autoconf_2.69",
    path = select({
        "@platforms//os:windows": "Library/bin/autoreconf",
        "//conditions:default": "bin/autoreconf",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "2.71",
    environment = "@autoconf_2.71",
    path = select({
        "@platforms//os:windows": "Library/bin/autoreconf",
        "//conditions:default": "bin/autoreconf",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "2.72",
    environment = "@autoconf_2.72",
    path = select({
        "@platforms//os:windows": "Library/bin/autoreconf",
        "//conditions:default": "bin/autoreconf",
    }),
    visibility = ["//visibility:public"],
)


alias(
    name = "autoreconf",
    actual = ":2.72",
    visibility = ["//visibility:public"],
)


sh_test(
    name = "help_test",
    srcs = ["//:run_tool_help_test.sh"],
    args = ["$(location :2.72)"],
    data = [":2.72"],
    target_compatible_with =
    select({
            "//:platform_linux_64": [],
            "//:platform_linux_aarch64": [],
            "//:platform_linux_ppc64le": [],
            "//:platform_macos_x86_64": [],
            "//:platform_macos_arm64": [],
            "//conditions:default": ["@platforms//:incompatible"],
        }),
)
