load("@rules_conda//conda/environment:defs.bzl", "run_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

run_binary(
    name = "2.69",
    environment = "@autoconf_2.69",
    executable = select({
        "@platforms//os:windows": "autoreconf.exe",
        "//conditions:default": "autoreconf",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "2.71",
    environment = "@autoconf_2.71",
    executable = select({
        "@platforms//os:windows": "autoreconf.exe",
        "//conditions:default": "autoreconf",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "2.72",
    environment = "@autoconf_2.72",
    executable = select({
        "@platforms//os:windows": "autoreconf.exe",
        "//conditions:default": "autoreconf",
    }),
    visibility = ["//visibility:public"],
)


alias(
    name = "autoreconf",
    actual = ":2.72",
    visibility = ["//visibility:public"],
)


sh_test(
    name = "autoreconf_smoke_test",
    srcs = ["//private:tool_smoke_test.sh"],
    args = ["$(location :2.72)"],
    data = [":2.72"],
    target_compatible_with =
    select({
            "//:platform_linux_64": [],
            "//:platform_linux_aarch64": [],
            "//:platform_linux_ppc64le": [],
            "//:platform_macos_x86_64": [],
            "//:platform_macos_arm64": [],
            "//conditions:default": ["@platforms//:incompatible"],
        }),
)
