load("@rules_conda//conda/environment:defs.bzl", "run_binary")

run_binary(
    name = "3.0",
    environment = "@bison_3.0",
    path = select({
        "@platforms//os:windows": "Library/bin/bison",
        "//conditions:default": "bin/bison",
    }),
    visibility = ["//visibility:public"],
)

run_binary(
    name = "3.1",
    environment = "@bison_3.1",
    path = select({
        "@platforms//os:windows": "Library/bin/bison",
        "//conditions:default": "bin/bison",
    }),
    visibility = ["//visibility:public"],
)

run_binary(
    name = "3.4",
    environment = "@bison_3.4",
    path = select({
        "@platforms//os:windows": "Library/bin/bison",
        "//conditions:default": "bin/bison",
    }),
    visibility = ["//visibility:public"],
)

run_binary(
    name = "3.8",
    environment = "@bison_3.8",
    path = select({
        "@platforms//os:windows": "Library/bin/bison",
        "//conditions:default": "bin/bison",
    }),
    visibility = ["//visibility:public"],
)

alias(
    name = "bison",
    actual = ":3.8",
    visibility = ["//visibility:public"],
)
