load("@rules_conda//conda/environment:defs.bzl", "run_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

run_binary(
    name = "3.0",
    environment = "@bison_3.0",
    path = select({
        "@platforms//os:windows": "Library/bin/bison",
        "//conditions:default": "bin/bison",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "3.1",
    environment = "@bison_3.1",
    path = select({
        "@platforms//os:windows": "Library/bin/bison",
        "//conditions:default": "bin/bison",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "3.4",
    environment = "@bison_3.4",
    path = select({
        "@platforms//os:windows": "Library/bin/bison",
        "//conditions:default": "bin/bison",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "3.8",
    environment = "@bison_3.8",
    path = select({
        "@platforms//os:windows": "Library/bin/bison",
        "//conditions:default": "bin/bison",
    }),
    visibility = ["//visibility:public"],
)


alias(
    name = "bison",
    actual = ":3.8",
    visibility = ["//visibility:public"],
)


sh_test(
    name = "help_test",
    srcs = ["//:run_tool_help_test.sh"],
    args = ["$(location :3.8)"],
    data = [":3.8"],
    target_compatible_with =
    select({
            "//:platform_linux_64": [],
            "//:platform_linux_aarch64": [],
            "//:platform_linux_ppc64le": [],
            "//:platform_macos_x86_64": [],
            "//:platform_macos_arm64": [],
            "//conditions:default": ["@platforms//:incompatible"],
        }),
)
