load("@rules_conda//conda/environment:defs.bzl", "run_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

run_binary(
    name = "3.0",
    environment = "@bison_3.0",
    executable = select({
        "@platforms//os:windows": "bison.exe",
        "//conditions:default": "bison",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "3.1",
    environment = "@bison_3.1",
    executable = select({
        "@platforms//os:windows": "bison.exe",
        "//conditions:default": "bison",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "3.4",
    environment = "@bison_3.4",
    executable = select({
        "@platforms//os:windows": "bison.exe",
        "//conditions:default": "bison",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "3.8",
    environment = "@bison_3.8",
    executable = select({
        "@platforms//os:windows": "bison.exe",
        "//conditions:default": "bison",
    }),
    visibility = ["//visibility:public"],
)


alias(
    name = "bison",
    actual = ":3.8",
    visibility = ["//visibility:public"],
)


sh_test(
    name = "bison_smoke_test",
    srcs = ["//private:tool_smoke_test.sh"],
    args = ["$(location :3.8)"],
    data = [":3.8"],
    target_compatible_with =
    select({
            "//:platform_linux_64": [],
            "//:platform_linux_aarch64": [],
            "//:platform_linux_ppc64le": [],
            "//:platform_macos_x86_64": [],
            "//:platform_macos_arm64": [],
            "//conditions:default": ["@platforms//:incompatible"],
        }),
)
