load("@rules_conda//conda/environment:defs.bzl", "run_binary")

run_binary(
    name = "3.5",
    environment = "@buildifier_3.5",
    path = select({
        "@platforms//os:windows": "Library/bin/buildifier",
        "//conditions:default": "bin/buildifier",
    }),
    visibility = ["//visibility:public"],
)

run_binary(
    name = "4.0",
    environment = "@buildifier_4.0",
    path = select({
        "@platforms//os:windows": "Library/bin/buildifier",
        "//conditions:default": "bin/buildifier",
    }),
    visibility = ["//visibility:public"],
)

run_binary(
    name = "4.2",
    environment = "@buildifier_4.2",
    path = select({
        "@platforms//os:windows": "Library/bin/buildifier",
        "//conditions:default": "bin/buildifier",
    }),
    visibility = ["//visibility:public"],
)

run_binary(
    name = "5.0",
    environment = "@buildifier_5.0",
    path = select({
        "@platforms//os:windows": "Library/bin/buildifier",
        "//conditions:default": "bin/buildifier",
    }),
    visibility = ["//visibility:public"],
)

run_binary(
    name = "5.1",
    environment = "@buildifier_5.1",
    path = select({
        "@platforms//os:windows": "Library/bin/buildifier",
        "//conditions:default": "bin/buildifier",
    }),
    visibility = ["//visibility:public"],
)

run_binary(
    name = "6.0",
    environment = "@buildifier_6.0",
    path = select({
        "@platforms//os:windows": "Library/bin/buildifier",
        "//conditions:default": "bin/buildifier",
    }),
    visibility = ["//visibility:public"],
)

run_binary(
    name = "6.1",
    environment = "@buildifier_6.1",
    path = select({
        "@platforms//os:windows": "Library/bin/buildifier",
        "//conditions:default": "bin/buildifier",
    }),
    visibility = ["//visibility:public"],
)

run_binary(
    name = "6.3",
    environment = "@buildifier_6.3",
    path = select({
        "@platforms//os:windows": "Library/bin/buildifier",
        "//conditions:default": "bin/buildifier",
    }),
    visibility = ["//visibility:public"],
)

run_binary(
    name = "6.4",
    environment = "@buildifier_6.4",
    path = select({
        "@platforms//os:windows": "Library/bin/buildifier",
        "//conditions:default": "bin/buildifier",
    }),
    visibility = ["//visibility:public"],
)

run_binary(
    name = "7.1",
    environment = "@buildifier_7.1",
    path = select({
        "@platforms//os:windows": "Library/bin/buildifier",
        "//conditions:default": "bin/buildifier",
    }),
    visibility = ["//visibility:public"],
)

run_binary(
    name = "7.3",
    environment = "@buildifier_7.3",
    path = select({
        "@platforms//os:windows": "Library/bin/buildifier",
        "//conditions:default": "bin/buildifier",
    }),
    visibility = ["//visibility:public"],
)

run_binary(
    name = "8.0",
    environment = "@buildifier_8.0",
    path = select({
        "@platforms//os:windows": "Library/bin/buildifier",
        "//conditions:default": "bin/buildifier",
    }),
    visibility = ["//visibility:public"],
)

run_binary(
    name = "8.2",
    environment = "@buildifier_8.2",
    path = select({
        "@platforms//os:windows": "Library/bin/buildifier",
        "//conditions:default": "bin/buildifier",
    }),
    visibility = ["//visibility:public"],
)

alias(
    name = "buildifier",
    actual = ":8.2",
    visibility = ["//visibility:public"],
)
