load("@rules_conda//conda/environment:defs.bzl", "run_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

run_binary(
    name = "3.5",
    environment = "@buildifier_3.5",
    executable = select({
        "@platforms//os:windows": "buildifier.exe",
        "//conditions:default": "buildifier",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "4.0",
    environment = "@buildifier_4.0",
    executable = select({
        "@platforms//os:windows": "buildifier.exe",
        "//conditions:default": "buildifier",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "4.2",
    environment = "@buildifier_4.2",
    executable = select({
        "@platforms//os:windows": "buildifier.exe",
        "//conditions:default": "buildifier",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "5.0",
    environment = "@buildifier_5.0",
    executable = select({
        "@platforms//os:windows": "buildifier.exe",
        "//conditions:default": "buildifier",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "5.1",
    environment = "@buildifier_5.1",
    executable = select({
        "@platforms//os:windows": "buildifier.exe",
        "//conditions:default": "buildifier",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "6.0",
    environment = "@buildifier_6.0",
    executable = select({
        "@platforms//os:windows": "buildifier.exe",
        "//conditions:default": "buildifier",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "6.1",
    environment = "@buildifier_6.1",
    executable = select({
        "@platforms//os:windows": "buildifier.exe",
        "//conditions:default": "buildifier",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "6.3",
    environment = "@buildifier_6.3",
    executable = select({
        "@platforms//os:windows": "buildifier.exe",
        "//conditions:default": "buildifier",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "6.4",
    environment = "@buildifier_6.4",
    executable = select({
        "@platforms//os:windows": "buildifier.exe",
        "//conditions:default": "buildifier",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "7.1",
    environment = "@buildifier_7.1",
    executable = select({
        "@platforms//os:windows": "buildifier.exe",
        "//conditions:default": "buildifier",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "7.3",
    environment = "@buildifier_7.3",
    executable = select({
        "@platforms//os:windows": "buildifier.exe",
        "//conditions:default": "buildifier",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "8.0",
    environment = "@buildifier_8.0",
    executable = select({
        "@platforms//os:windows": "buildifier.exe",
        "//conditions:default": "buildifier",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "8.2",
    environment = "@buildifier_8.2",
    executable = select({
        "@platforms//os:windows": "buildifier.exe",
        "//conditions:default": "buildifier",
    }),
    visibility = ["//visibility:public"],
)


alias(
    name = "buildifier",
    actual = ":8.2",
    visibility = ["//visibility:public"],
)


sh_test(
    name = "buildifier_smoke_test",
    srcs = ["//private:tool_smoke_test.sh"],
    args = ["$(location :8.2)"],
    data = [":8.2"],
    target_compatible_with =
    select({
            "//:platform_linux_64": [],
            "//:platform_macos_x86_64": [],
            "//:platform_windows_x86_64": [],
            "//conditions:default": ["@platforms//:incompatible"],
        }),
)
