load("@rules_conda//conda/environment:defs.bzl", "run_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

run_binary(
    name = "3.14",
    environment = "@cmake_3.14",
    path = select({
        "@platforms//os:windows": "Library/bin/cmake.exe",
        "//conditions:default": "bin/cmake",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "3.15",
    environment = "@cmake_3.15",
    path = select({
        "@platforms//os:windows": "Library/bin/cmake.exe",
        "//conditions:default": "bin/cmake",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "3.16",
    environment = "@cmake_3.16",
    path = select({
        "@platforms//os:windows": "Library/bin/cmake.exe",
        "//conditions:default": "bin/cmake",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "3.17",
    environment = "@cmake_3.17",
    path = select({
        "@platforms//os:windows": "Library/bin/cmake.exe",
        "//conditions:default": "bin/cmake",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "3.18",
    environment = "@cmake_3.18",
    path = select({
        "@platforms//os:windows": "Library/bin/cmake.exe",
        "//conditions:default": "bin/cmake",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "3.19",
    environment = "@cmake_3.19",
    path = select({
        "@platforms//os:windows": "Library/bin/cmake.exe",
        "//conditions:default": "bin/cmake",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "3.20",
    environment = "@cmake_3.20",
    path = select({
        "@platforms//os:windows": "Library/bin/cmake.exe",
        "//conditions:default": "bin/cmake",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "3.21",
    environment = "@cmake_3.21",
    path = select({
        "@platforms//os:windows": "Library/bin/cmake.exe",
        "//conditions:default": "bin/cmake",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "3.22",
    environment = "@cmake_3.22",
    path = select({
        "@platforms//os:windows": "Library/bin/cmake.exe",
        "//conditions:default": "bin/cmake",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "3.23",
    environment = "@cmake_3.23",
    path = select({
        "@platforms//os:windows": "Library/bin/cmake.exe",
        "//conditions:default": "bin/cmake",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "3.24",
    environment = "@cmake_3.24",
    path = select({
        "@platforms//os:windows": "Library/bin/cmake.exe",
        "//conditions:default": "bin/cmake",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "3.25",
    environment = "@cmake_3.25",
    path = select({
        "@platforms//os:windows": "Library/bin/cmake.exe",
        "//conditions:default": "bin/cmake",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "3.26",
    environment = "@cmake_3.26",
    path = select({
        "@platforms//os:windows": "Library/bin/cmake.exe",
        "//conditions:default": "bin/cmake",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "3.27",
    environment = "@cmake_3.27",
    path = select({
        "@platforms//os:windows": "Library/bin/cmake.exe",
        "//conditions:default": "bin/cmake",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "3.28",
    environment = "@cmake_3.28",
    path = select({
        "@platforms//os:windows": "Library/bin/cmake.exe",
        "//conditions:default": "bin/cmake",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "3.29",
    environment = "@cmake_3.29",
    path = select({
        "@platforms//os:windows": "Library/bin/cmake.exe",
        "//conditions:default": "bin/cmake",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "3.30",
    environment = "@cmake_3.30",
    path = select({
        "@platforms//os:windows": "Library/bin/cmake.exe",
        "//conditions:default": "bin/cmake",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "3.31",
    environment = "@cmake_3.31",
    path = select({
        "@platforms//os:windows": "Library/bin/cmake.exe",
        "//conditions:default": "bin/cmake",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "4.0",
    environment = "@cmake_4.0",
    path = select({
        "@platforms//os:windows": "Library/bin/cmake.exe",
        "//conditions:default": "bin/cmake",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "4.1",
    environment = "@cmake_4.1",
    path = select({
        "@platforms//os:windows": "Library/bin/cmake.exe",
        "//conditions:default": "bin/cmake",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "4.2",
    environment = "@cmake_4.2",
    path = select({
        "@platforms//os:windows": "Library/bin/cmake.exe",
        "//conditions:default": "bin/cmake",
    }),
    visibility = ["//visibility:public"],
)


alias(
    name = "cmake",
    actual = ":4.2",
    visibility = ["//visibility:public"],
)


sh_test(
    name = "cmake_smoke_test",
    srcs = ["//private:tool_smoke_test.sh"],
    args = ["$(location :4.2)"],
    data = [":4.2"],
    target_compatible_with =
    select({
            "//:platform_linux_64": [],
            "//:platform_linux_aarch64": [],
            "//:platform_linux_ppc64le": [],
            "//:platform_macos_x86_64": [],
            "//:platform_macos_arm64": [],
            "//:platform_windows_x86_64": [],
            "//conditions:default": ["@platforms//:incompatible"],
        }),
)
