load("@rules_conda//conda/environment:defs.bzl", "run_binary")

run_binary(
    name = "1.8",
    environment = "@doxygen_1.8",
    path = select({
        "@platforms//os:windows": "Library/bin/doxygen",
        "//conditions:default": "bin/doxygen",
    }),
    visibility = ["//visibility:public"],
)

run_binary(
    name = "1.9",
    environment = "@doxygen_1.9",
    path = select({
        "@platforms//os:windows": "Library/bin/doxygen",
        "//conditions:default": "bin/doxygen",
    }),
    visibility = ["//visibility:public"],
)

run_binary(
    name = "1.10",
    environment = "@doxygen_1.10",
    path = select({
        "@platforms//os:windows": "Library/bin/doxygen",
        "//conditions:default": "bin/doxygen",
    }),
    visibility = ["//visibility:public"],
)

run_binary(
    name = "1.11",
    environment = "@doxygen_1.11",
    path = select({
        "@platforms//os:windows": "Library/bin/doxygen",
        "//conditions:default": "bin/doxygen",
    }),
    visibility = ["//visibility:public"],
)

run_binary(
    name = "1.12",
    environment = "@doxygen_1.12",
    path = select({
        "@platforms//os:windows": "Library/bin/doxygen",
        "//conditions:default": "bin/doxygen",
    }),
    visibility = ["//visibility:public"],
)

run_binary(
    name = "1.13",
    environment = "@doxygen_1.13",
    path = select({
        "@platforms//os:windows": "Library/bin/doxygen",
        "//conditions:default": "bin/doxygen",
    }),
    visibility = ["//visibility:public"],
)

alias(
    name = "doxygen",
    actual = ":1.13",
    visibility = ["//visibility:public"],
)
