load("@rules_conda//conda/environment:defs.bzl", "run_binary")

run_binary(
    name = "1.8",
    environment = "@doxygen_1.8",
    path = select({
        "@platforms//os:windows": "Library/bin/doxygen",
        "//conditions:default": "bin/doxygen",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "1.9",
    environment = "@doxygen_1.9",
    path = select({
        "@platforms//os:windows": "Library/bin/doxygen",
        "//conditions:default": "bin/doxygen",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "1.10",
    environment = "@doxygen_1.10",
    path = select({
        "@platforms//os:windows": "Library/bin/doxygen",
        "//conditions:default": "bin/doxygen",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "1.11",
    environment = "@doxygen_1.11",
    path = select({
        "@platforms//os:windows": "Library/bin/doxygen",
        "//conditions:default": "bin/doxygen",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "1.12",
    environment = "@doxygen_1.12",
    path = select({
        "@platforms//os:windows": "Library/bin/doxygen",
        "//conditions:default": "bin/doxygen",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "1.13",
    environment = "@doxygen_1.13",
    path = select({
        "@platforms//os:windows": "Library/bin/doxygen",
        "//conditions:default": "bin/doxygen",
    }),
    visibility = ["//visibility:public"],
)


alias(
    name = "doxygen",
    actual = ":1.13",
    visibility = ["//visibility:public"],
)


sh_test(
    name = "help_test",
    srcs = ["//:run_tool_help_test.sh"],
    args = ["$(location :1.13)"],
    data = [":1.13"],
    target_compatible_with =
    select({
            "//:platform_linux_64": [],
            "//:platform_linux_aarch64": [],
            "//:platform_linux_ppc64le": [],
            "//:platform_macos_x86_64": [],
            "//:platform_macos_arm64": [],
            "//:platform_windows_x86_64": [],
            "//conditions:default": ["@platforms//:incompatible"],
        }),
)
